solving errors with employee entity
